--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
   <section id="title">
-    <div class="container-fluid" style="padding: 3% 15%;">
+    <div class="container-fluid" style="padding: 3% 15% 7%;">
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -41,13 +41,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav ">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Contact</a>
+              <a class="nav-link active" aria-current="page" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -232,9 +232,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-foot">Find the True Love of Your Dog's Life Today.</h3>
+    <button type=" button" class="btn btn-lg btn-dark cta-button"><i class="fab fa-apple"></i>Download</button>
+    <button type="button" class="btn  btn-lg btn-outline-light cta-button"><i
+        class="fab fa-google-play"></i>Download</button>
 
   </section>
 
@@ -242,8 +243,16 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <div class="icon-container">
+      <i  class="fab fa-linkedin "></i>
+      <i  class="fab fa-facebook "></i>
+      <i  class="fab fa-instagram "></i>
+      <i  class="fab fa-twitter-square "></i>
+    </div>
+   
 
-    <p>© Copyright 2018 TinDog</p>
+
+    <p id="copyright">© Copyright 2018 TinDog</p>
 
   </footer>
 
